<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintForecastLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ForecastActivity">


        <TextView
            android:id="@+id/basicForecastText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather_summary"
            app:layout_constraintBottom_toTopOf="@id/hourlyForecastText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.403"
            app:layout_marginBaseline="175dp" />

        <TextView
            android:id="@+id/hourlyForecastText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="176dp"
            android:text="@string/hourly"
            app:layout_constraintBottom_toTopOf="@+id/dailyForecastText"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/dailyForecastText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="175dp"
            android:text="@string/daily"
            app:layout_constraintBottom_toTopOf="@+id/clothingRedirectButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/clothingRedirectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:onClick="performClothing"
            android:text="@string/clothing_redirect_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/forecastBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="performMain"
            android:text="@string/back"
            app:layout_constraintBottom_toTopOf="@+id/basicForecastText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/weather" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="384dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="116dp"
            android:layout_height="114dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="96dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/temperatureText"
            android:layout_width="50dp"
            android:layout_height="37dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="52dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/feelslikeText"
            android:layout_width="48dp"
            android:layout_height="40dp"
            android:text="TextView"
            tools:layout_editor_absoluteX="311dp"
            tools:layout_editor_absoluteY="148dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/humidityText"
            android:layout_width="48dp"
            android:layout_height="40dp"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="248dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/UVindexText"
            android:layout_width="48dp"
            android:layout_height="40dp"
            android:layout_marginTop="292dp"
            android:layout_marginEnd="248dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/windText"
            android:layout_width="82dp"
            android:layout_height="37dp"
            android:layout_marginTop="348dp"
            android:layout_marginEnd="236dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/weatherdescText"
            android:layout_width="177dp"
            android:layout_height="91dp"
            android:layout_marginTop="292dp"
            android:layout_marginEnd="36dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="85dp"
            android:layout_height="91dp"
            android:layout_marginTop="456dp"
            android:layout_marginEnd="212dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="85dp"
            android:layout_height="91dp"
            android:layout_marginTop="560dp"
            android:layout_marginEnd="116dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="85dp"
            android:layout_height="91dp"
            android:layout_marginTop="560dp"
            android:layout_marginEnd="312dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="85dp"
            android:layout_height="91dp"
            android:layout_marginTop="560dp"
            android:layout_marginEnd="12dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="85dp"
            android:layout_height="91dp"
            android:layout_marginTop="560dp"
            android:layout_marginEnd="212dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="85dp"
            android:layout_height="91dp"
            android:layout_marginTop="656dp"
            android:layout_marginEnd="212dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="85dp"
            android:layout_height="91dp"
            android:layout_marginTop="656dp"
            android:layout_marginEnd="12dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="85dp"
            android:layout_height="91dp"
            android:layout_marginTop="656dp"
            android:layout_marginEnd="312dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="85dp"
            android:layout_height="91dp"
            android:layout_marginTop="656dp"
            android:layout_marginEnd="116dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="85dp"
            android:layout_height="91dp"
            android:layout_marginTop="452dp"
            android:layout_marginEnd="12dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="85dp"
            android:layout_height="91dp"
            android:layout_marginTop="456dp"
            android:layout_marginEnd="116dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="85dp"
            android:layout_height="91dp"
            android:layout_marginTop="452dp"
            android:layout_marginEnd="308dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/weatherText"
            android:layout_width="96dp"
            android:layout_height="35dp"
            android:layout_marginTop="208dp"
            android:layout_marginEnd="36dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>